<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/nome_gp"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_nome_gp"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:entries="@array/gerentes_projeto" />

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Número"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_num_demanda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:fontFamily="monospace"
                android:hint="@string/num"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Título"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_titulo_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:fontFamily="monospace"
                android:hint="@string/titulo"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:fontFamily="monospace"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_status_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_layout_margin"
                android:entries="@array/status_demanda" />

            <EditText
                android:id="@+id/et_status_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Responsável"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_responsavel_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:fontFamily="monospace"
                android:hint="@string/responsavel"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Prazo"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_prazo_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:focusable="false"
                android:fontFamily="monospace"
                android:hint="@string/prazo"
                android:inputType="none"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Observação"
                android:textAlignment="center"
                android:textColor="@color/colorTheme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_observacao_demanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:fontFamily="monospace"
                android:hint="@string/observacao"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
